Edit Course Offering GWT Rewrite
Rewrote Edit Course Offering in GWT. Full page functionality.

Added funding department to Edit Course Offering GWT.

Added funding department to Course Offering Export and Roll Forward.