@@ -114,6 +114,8 @@ public class InstructionalOfferingListForm extends ActionForm implements Instruc
 	
 	private Boolean exams;
 	
+	private Boolean fundingDepartment;
+	
 	private String sortBy;
 	
 	private Boolean instructorAssignment;
@@ -226,28 +228,29 @@ public class InstructionalOfferingListForm extends ActionForm implements Instruc
 		courseNbr = "";
 		instructionalOfferings = null;
 		subjectAreas = new ArrayList();
-		divSec = Boolean.valueOf(false);
-		demand = Boolean.valueOf(false);
-		projectedDemand = Boolean.valueOf(false);
-		minPerWk = Boolean.valueOf(false);
-		limit = Boolean.valueOf(false);
-		snapshotLimit = Boolean.valueOf(false);
-		roomLimit = Boolean.valueOf(false);
-		manager = Boolean.valueOf(false);
-		datePattern = Boolean.valueOf(false);
-		timePattern = Boolean.valueOf(false);
-		preferences = Boolean.valueOf(false);
-		instructor = Boolean.valueOf(false);
-		timetable = Boolean.valueOf(false);
-		credit = Boolean.valueOf(false);
-		subpartCredit = Boolean.valueOf(false);
-		schedulePrintNote = Boolean.valueOf(false);
-		note = Boolean.valueOf(false);
-		title = Boolean.valueOf(false);
-		consent = Boolean.valueOf(false);
-		exams = Boolean.valueOf(false);
-		instructorAssignment = Boolean.valueOf(false);
-		lms = Boolean.valueOf(false);
+		divSec = new Boolean(false);
+		demand = new Boolean(false);
+		projectedDemand = new Boolean(false);
+		minPerWk = new Boolean(false);
+		limit = new Boolean(false);
+		snapshotLimit = new Boolean(false);
+		roomLimit = new Boolean(false);
+		manager = new Boolean(false);
+		datePattern = new Boolean(false);
+		timePattern = new Boolean(false);
+		preferences = new Boolean(false);
+		instructor = new Boolean(false);
+		timetable = new Boolean(false);
+		credit = new Boolean(false);
+		subpartCredit = new Boolean(false);
+		schedulePrintNote = new Boolean(false);
+		note = new Boolean(false);
+		title = new Boolean(false);
+		consent = new Boolean(false);
+		exams = new Boolean(false);
+		fundingDepartment = new Boolean(false);
+		instructorAssignment = new Boolean(false);
+		lms = new Boolean(false);
 		waitlist = null;
 		sortBy = ClassCourseComparator.getName(ClassCourseComparator.SortBy.NAME);
 	}
@@ -474,6 +477,9 @@ public class InstructionalOfferingListForm extends ActionForm implements Instruc
     public void setExams(Boolean exams) {
         this.exams = exams;
     }
+    public void setFundingDepartment(Boolean fundingDepartment) {
+        this.fundingDepartment = fundingDepartment;
+    }
     
     public Boolean getInstructorAssignment() {
     	return instructorAssignment;
@@ -521,6 +527,7 @@ public class InstructionalOfferingListForm extends ActionForm implements Instruc
         note=null;
         title=null;
         consent=null;
+        fundingDepartment=null;
         instructorAssignment = null;
         lms = null;
         waitlist = null;
@@ -565,8 +572,7 @@ public class InstructionalOfferingListForm extends ActionForm implements Instruc
 		return (getCourseNbr()==null || getCourseNbr().isEmpty()) && !"W".equals(getWaitlist()) && !"N".equals(getWaitlist());
 	}
 
-	@Override
 	public Boolean getFundingDepartment() {
-		return false;
+		return fundingDepartment;
 	}
 }
